# -*- coding: utf-8 -*-

2008-09-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb:  Autoload SpecFetcher to improve load
	time.  Patch #21577 by Simon Chiang.

2008-09-10  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/install_command.rb:  Describe _version_ in `gem
	help install`.
	* lib/rubygems/commands/environment_command.rb:  Describe environment
	variables and gemrc in `gem help env`.
	* lib/rubygems.rb:  Warn when executing Gem::manage_gems.
	* lib/rubygems/doc_manager.rb:  Have RubyGems update the ri cache.
	* lib/rubygems/source_index.rb:  Ensure specs are read as UTF-8.
	* lib/rubygems/specification.rb:  Add magic comment to .gemspec files
	so they are read in as UTF-8.

2008-08-22  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems.rb: Corrected usage of HOMEDRIVE and HOMEPATH on Windows.
	Escape Gem.ruby if spaces in the path are present. Solves bug related to
	extensions compile process.
	* test/test_gem.rb: Added test to verify both conditions.

2008-08-17  Eric Hodel  <drbrain@segment7.net>

	* doc/release_notes/rel_1_3_0.rdoc:  Initial release notes for 1.3.0.
	* util/CL2notes:  Release note creation helper script.

2008-08-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  Added #both? to complement
	  #local? and #remote?.
	* lib/rubygems/commands/query_command.rb:  Print out LOCAL/REMOTE with
	--both, even without a TTY.
	* lib/rubygems.rb:  Add Gem.find_files, allows a gem to discover
	features provided by other gems.

2008-08-14  Wilson Bilkovich  <wilson@supremetyrant.com>

	* lib/rubygems/source_index.rb: Deprecate options to 'search' other than
	Gem::Dependency instances and issue warning until November 2008.
	* lib/rubygems/platform.rb:	Remove deprecated constant warnings
	and really deprecate them.
	* Rakefile: If the SETUP_OPTIONS environment variable is set, pass its
	contents as arguments to setup.rb
	* test/test_gem_commands_uninstall_command.rb: Added
