@@ -4,6 +4,10 @@
 
 	* lib/rubygems/source_index.rb:  Autoload SpecFetcher to improve load
 	time.  Patch #21577 by Simon Chiang.
+	* lib/rubygems/commands/lock_command.rb:  Modernize.  Fix --strict.
+	Patch #21814 by Sven Engelhardt.
+	* lib/rubygems/platform.rb:  Fix for solaris platform.  Patch #21911
+	by Bob Remeika.
 
 2008-09-10  Eric Hodel  <drbrain@segment7.net>
 
